2014-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/tables.c src/tables.h: Remove undocumented routine
	test_time(). It was never updated to handle sub-second time precision,
	and in any case the functionality is now coverted adequately by
	"print strptime()" and "print strftime()".

	* src/color.c (filled_polygon_3dcoords filled_polygon_zfixed)
	src/pm3d.c (filled_color_contour_plot):	 The option "set pm3d at C" is
	undocumented and doesn't work anyhow.  Wrap the corresponding code in
	#ifdef PM3D_CONTOURS . This disabled code may or may not be useful for
	some future implementation of filled contours.

	* term/post.trm (PS_dashtype): Always stroke the previous path before
	setting a new dashtype.

2014-05-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.c (LOCAL_BUFFER_SIZE): New constant.
	(gprintf): Use constant to identify buffer size, instead of typing
	the same magic number multiple times. Insert warning about
	remaining magic number.

	* src/plot2d.c (get_data): Fix buffer overflow a bit more cleanly.
	(compare_boxplot_factors): Insert warning about magic number.

2014-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): fix buffer overflow

	* src/datafile.c (f_stringcolumn): Return an empty string if asked for
	stringcolumn(N) on an empty field of a *.csv file.  Otherwise it would
	return NULL which may cause a segfault later on.
	Bugfix.

	* src/datafile.c (df_readascii): If xticlabels(f(n)) returns a 
	non-string value then do not generate an axis tic.  It used to issue
	a warning about illegal string values but generated a tic anyway.

2014-05-10  Dima Kogan  <dima@secretsauce.net>

	* src/mouse.c (do_zoom rescale_around_mouse):  Handle various conditions
	that caused zooming around the current mouse position to fail.
	Re-applied after tracking down conflict.

2014-05-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: various small corrections